...
            OutlinedButton(
                onClick = {
                    viewModel.enterAsGuest()
                    Embrace.getInstance().addBreadcrumb("Entered as guest")
                          },
                enabled = !state.isLoading,
                modifier = Modifier.fillMaxWidth().testTag("enter_as_guest").clickable(onClickLabel = "Enter as guest") {
                }
            ) {
                Text("Enter as guest")
            }
            if (state.isLoading) {
                LinearProgressIndicator(modifier = Modifier.fillMaxWidth())
...
