...
                            title = { Text("Home") },
                            actions = {
                                val ctx = LocalContext.current
                                IconButton(onClick = {
                                    ctx.startActivity(Intent(ctx, CartActivity::class.java))
                                }, modifier = Modifier.testTag("open_cart_btn")) {
                                    Icon(Icons.Default.ShoppingCart, contentDescription = "Open cart")
                                }
                                IconButton(onClick = {
                                    ctx.startActivity(Intent(ctx, ProfileActivity::class.java))
                                }) {
                                    Icon(Icons.Default.Person, contentDescription = "Open profile")
                                }
...
